# notes

./: .gitignore  Cargo.toml
src/: main.rs
src/notes/: long.rs  mod.rs  note.rs  short.rs  view.rs
