[package]
name = "diary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
colored = "2.0.0"
inquire = { version = "0.6.2", features = ["editor", "date"] }
serde = { version = "1.0.164", features = ["derive", "serde_derive"] }
serde_json = "1.0.99"
